fix problem with text wrapping

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -1,3 +1,7 @@
+p {
+    white-space: nowrap;
+}
+
 #popup-background {
     width: 100vw;
     height: 100vh;
